Add downstream to upstream summary
